--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,33 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>chatapp</name>
-  <url>http://maven.apache.org</url>
+  <name>Minimal DI</name>
+  <url>https://github.com/eis/minimal-di</url>
+  <description>This is a minimal dependency injection framework.</description>
+
+  <issueManagement>
+    <system>github</system>
+    <url>https://github.com/eis/minimal-di/issues</url>
+  </issueManagement>
+
+  <ciManagement>
+    <system>Travis</system>
+    <url>https://travis-ci.org/eis/minimal-di</url>
+  </ciManagement>
+
+	<licenses>
+		<license>
+			<name>Apache License</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<scm>
+		<url>https://github.com/eis/minimal-di</url>
+		<connection>scm:git:git://github.com/eis/minimal-di.git</connection>
+		<developerConnection>scm:git:git@github.com:eis/minimal-di.git</developerConnection>
+	</scm>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,6 +41,16 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
   </properties>
+
+  <developers>
+    <developer>
+      <id>eis</id>
+      <roles>
+        <role>developer</role>
+      </roles>
+      <timezone>+2</timezone>
+    </developer>
+  </developers>
 
   <dependencies>
     <dependency>
