--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
   - export PROJECT_VERSION="`sed -n 's|.*<version>\(.*\)</version>.*|\1|p' pom.xml | awk '{ print $1; exit }'`" && echo Project version is $PROJECT_VERSION
 
 after_success:
-  - "[[ $TRAVIS_BRANCH == \"master\" ]] && { ./src/main/scripts/travis-publish-minimal-di-site.sh; };"
+  - ./src/main/scripts/travis-publish-minimal-di-site.sh
 
 env:
   global:
