--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,45 @@
               </execution>
           </executions>
       </plugin>
+      <plugin>
+          <!--
+              pitest doesn't (yet) support maven site goal,
+              so we can only run it for local checking.
+              For this, we bind it to 'verify' phase.
+              See https://github.com/hcoles/pitest/issues/10
+          -->
+          <groupId>org.pitest</groupId>
+          <artifactId>pitest-maven</artifactId>
+          <version>1.1.2</version>
+          <configuration>
+            <targetClasses>
+              <param>fi.eis.libraries*</param>
+            </targetClasses>
+            <targetTests>
+              <param>fi.eis.libraries*</param>
+            </targetTests>
+  					<mutators>
+  						<mutator>ALL</mutator>
+  					</mutators>
+  					<outputFormats>
+  						<outputFormat>HTML</outputFormat>
+  						<outputFormat>XML</outputFormat>
+  					</outputFormats>
+  					<timestampedReports>false</timestampedReports>
+  					<avoidCallsTo>
+  					 <param>fi.eis.libraries.di.SimpleLogger</param>
+  					</avoidCallsTo>
+          </configuration>
+  				<executions>
+  					<execution>
+  						<id>pit-execute-mutation-coverage</id>
+  						<phase>verify</phase>
+  						<goals>
+  							<goal>mutationCoverage</goal>
+  						</goals>
+  					</execution>
+  				</executions>
+      </plugin>
     </plugins>
   </build>
   <reporting>
@@ -144,7 +183,11 @@
           <check/>
         </configuration>
       </plugin>
-
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>javancss-maven-plugin</artifactId>
+        <version>2.1</version>
+      </plugin>
     </plugins>
   </reporting>
 </project>
