--- a/pom.xml
+++ b/pom.xml
@@ -117,8 +117,9 @@
           <!--
               pitest doesn't (yet) support maven site goal,
               so we can only run it for local checking.
-              For this, we bind it to 'verify' phase.
               See https://github.com/hcoles/pitest/issues/10
+
+              Run with mvn org.pitest:pitest-maven:scmMutationCoverage
           -->
           <groupId>org.pitest</groupId>
           <artifactId>pitest-maven</artifactId>
@@ -142,15 +143,6 @@
   					 <param>fi.eis.libraries.di.SimpleLogger</param>
   					</avoidCallsTo>
           </configuration>
-  				<executions>
-  					<execution>
-  						<id>pit-execute-mutation-coverage</id>
-  						<phase>verify</phase>
-  						<goals>
-  							<goal>mutationCoverage</goal>
-  						</goals>
-  					</execution>
-  				</executions>
       </plugin>
     </plugins>
   </build>
@@ -187,6 +179,11 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>javancss-maven-plugin</artifactId>
         <version>2.1</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <version>3.0.0</version>
       </plugin>
     </plugins>
   </reporting>
