--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ after_success:
   - export PROJECT_NAME="`sed -n 's|.*<name>\(.*\)</name>.*|\1|p' pom.xml | head -1`" && echo Project name is $PROJECT_NAME
   - export PROJECT_VERSION="`sed -n 's|.*<version>\(.*\)</version>.*|\1|p' pom.xml | awk '{ print $1; exit }'`" && echo Project version is $PROJECT_VERSION
   - ./src/main/scripts/travis-publish-minimal-di-site.sh
+  - "[[ $TRAVIS_BRANCH == \"master\" ]] && { python ./src/main/scripts/addServer.py; mvn clean deploy --settings ~/.m2/mySettings.xml; };"
 
 env:
   global:
