--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,38 @@
     </developer>
   </developers>
 
+  <profiles>
+      <profile>
+          <id>release-sign-artifacts</id>
+          <activation>
+              <property>
+                  <name>performRelease</name>
+                  <value>true</value>
+              </property>
+          </activation>
+          <build>
+              <plugins>
+                  <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-gpg-plugin</artifactId>
+                      <version>1.5</version>
+                      <configuration>
+                          <passphrase>${gpg.passphrase}</passphrase>
+                      </configuration>
+                      <executions>
+                          <execution>
+                              <id>sign-artifacts</id>
+                              <phase>verify</phase>
+                              <goals>
+                                  <goal>sign</goal>
+                              </goals>
+                          </execution>
+                      </executions>
+                  </plugin>
+              </plugins>
+          </build>
+      </profile>
+  </profiles>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -150,6 +182,17 @@
                 </goals>
               </execution>
           </executions>
+      </plugin>
+      <!-- release + sign -->
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.4.1</version>
+          <configuration>
+              <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
+              <!-- see http://jira.codehaus.org/browse/MGPG-9 -->
+              <mavenExecutorId>forked-path</mavenExecutorId>
+          </configuration>
       </plugin>
       <plugin>
           <!--
