--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.github.eis.libraries</groupId>
   <artifactId>minimal-di</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Minimal DI</name>
@@ -43,7 +43,7 @@
       <url>https://github.com/eis/minimal-di</url>
       <connection>scm:git:git://github.com/eis/minimal-di.git</connection>
       <developerConnection>scm:git:git@github.com:eis/minimal-di.git</developerConnection>
-    <tag>minimal-di-1.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
