--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,21 @@
             </avoidCallsTo>
           </configuration>
       </plugin>
+      <plugin>
+        <!--to report to coveralls, use -DrepoToken=yourrepotoken -->
+        <groupId>org.eluder.coveralls</groupId>
+        <artifactId>coveralls-maven-plugin</artifactId>
+        <version>4.0.0</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.7</version>
+        <configuration>
+          <format>xml</format>
+          <maxmem>256m</maxmem>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <reporting>
@@ -254,7 +269,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
-        <version>2.6</version>
+        <version>2.7</version>
         <configuration>
           <formats>
             <format>html</format>
