--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ sudo: false
 jdk:
   - oraclejdk7
 
-install: mvn clean site -DbuildNumber=${TRAVIS_BUILD_NUMBER}
+install: mvn clean site --quiet --batch-mode -DbuildNumber=${TRAVIS_BUILD_NUMBER}
 
 after_success:
   - export PROJECT_NAME="`sed -n 's|.*<name>\(.*\)</name>.*|\1|p' pom.xml | head -1`" && echo Project name is $PROJECT_NAME
   - export PROJECT_VERSION="`sed -n 's|.*<version>\(.*\)</version>.*|\1|p' pom.xml | awk '{ print $1; exit }'`" && echo Project version is $PROJECT_VERSION
   - ./src/main/scripts/travis-publish-minimal-di-site.sh
-  - "[[ $TRAVIS_BRANCH == \"master\" ]] && { python ./src/main/scripts/addServer.py; mvn clean deploy --settings ~/.m2/mySettings.xml; };"
-  - mvn clean cobertura:cobertura coveralls:report  
+  - "[[ $TRAVIS_BRANCH == \"master\" ]] && { python ./src/main/scripts/addServer.py; mvn clean deploy --quiet --batch-mode --settings ~/.m2/mySettings.xml; };"
+  - mvn clean cobertura:cobertura coveralls:report --quiet --batch-mode
 
 env:
   global:
