--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 sudo: false
 
 jdk:
-  - oraclejdk7
+  - openjdk8
 
 install: mvn clean site --quiet --batch-mode -DbuildNumber=${TRAVIS_BUILD_NUMBER}
 
