--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,19 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: target/site # The folder the action should deploy.
+      - name: Nexus Repo Publish
+        uses: sonatype-nexus-community/nexus-repo-github-action@master
+        # use this once this actually works
+        #if: github.ref == 'refs/heads/master'
+        with:
+          serverUrl: https://oss.sonatype.org/content/repositories/snapshots
+          username: ${{ secrets.SONATYPE_USER }}
+          password: ${{ secrets.SONATYPE_PASSWORD }}
+          format: maven2
+          repository: Snapshots
+          coordinates: groupId=com.github.eis.libraries artifactId=minimal-di version=1.2.0-SNAPSHOT
+          assets: extension=jar
+          filename: ./target/minimal-di-1.2.0-SNAPSHOT.jar
 
   coverage:
     needs: build
