--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '7', '8', '11', '16']
+        java: [ '8', '11', '16']
 
     name: Java ${{ matrix.java }} build with Maven
     env:
@@ -83,5 +83,5 @@ jobs:
       - uses: codecov/codecov-action@v1
         with:
           fail_ci_if_error: true
-          file: ./**/target/site/cobertura/cobertura.xml
+          file: ./**/target/site/jacoco/jacoco.xml
           name: codecov
