--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,11 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ '7', '8']
 
-    name: Java build with Maven
+    name: Java ${{ matrix.java }} build with Maven
     env:
       MAVEN_OPTS: '-Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn'
 
@@ -22,13 +25,13 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: '8'
-          distribution: 'adopt'
+          java-version: ${{ matrix.java }}
+          distribution: 'zulu'
       - name: Build with Maven
         run: mvn site --batch-mode -DbuildNumber=${GITHUB_RUN_NUMBER}
       - name: Deploy docs 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master' && matrix.java == '7'
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: target/site # The folder the action should deploy.
