--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '7', '8', '11', '16']
+        java: [ '6', '7', '8', '11', '16']
 
     name: Java ${{ matrix.java }} build with Maven
     env:
@@ -27,9 +27,15 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
           distribution: 'zulu'
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v4
+        if: matrix.java == '6'
+        with:
+          maven-version: 3.2.5
       - name: Build with Maven
         run: mvn test --batch-mode -DbuildNumber=${GITHUB_RUN_NUMBER}
       - name: Check for vulnerabilities
+        if: matrix.java > '6'
         run: mvn org.sonatype.ossindex.maven:ossindex-maven-plugin:audit
 
   update-site:
